kubernetes_deployment/deployment_Analysis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: correlations 
  labels:
    app: correlations
spec:
  replicas: 3
  selector:
    matchLabels:
      app: correlations
  template:
    metadata:
      labels:
        app: correlations
    spec:
      containers:
      - name: correlations
        image: europe-west1-docker.pkg.dev/fcul123/cn-repo/correlations:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: correlations-s
  labels:
    app: correlations
spec:
  selector:
    app: correlations
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics 
  labels:
    app: analytics
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics
        image: europe-west1-docker.pkg.dev/fcul123/cn-repo/analytics:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-s
  labels:
    app: analytics
spec:
  selector:
    app: analytics
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
