kubernetes_deployment/deployment_DB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongo-taxi
  name: mongo-taxi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-taxi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo-taxi
    spec:
      containers:
      - image: mongo:latest
        name: mongo-taxi
        args: ["--dbpath","/data/db"]
        ports:
        - containerPort: 27017
        livenessProbe:
          exec:
            command:
              - mongo
              - --disableImplicitSessions
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - mongo
              - --disableImplicitSessions
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/mnt/data"
      volumes:
      - name: "mongo-data-dir"
        persistentVolumeClaim:
          claimName: mongo-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-s
  labels:
    app: mongo-s
spec:
  selector:
    app: mongo-taxi
  ports:
    - name: http
      protocol: TCP
      port: 27017
      targetPort: 27017
