kubernetes_deployment/deployment_DB_ptt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongo-taxi-ptt
  name: mongo-taxi-ptt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-taxi-ptt
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo-taxi-ptt
    spec:
      containers:
      - image: mongo:latest
        name: mongo-taxi-ptt
        command: ["/bin/sh", "-c", "mkdir -p mnt/ptt | chmod +x -R mnt | mongod --dbpath /mnt/ptt"]
        ports:
        - containerPort: 27017
        livenessProbe:
          exec:
            command:
              - mongo
              - --disableImplicitSessions
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - mongo
              - --disableImplicitSessions
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: "mongo-data-dir-ptt"
          mountPath: "/mnt/ptt"
      volumes:
      - name: "mongo-data-dir-ptt"
        persistentVolumeClaim:
          claimName: mongo-data-ptt
      
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-ptt-s
  labels:
    app: mongo-ptt-s
spec:
  selector:
    app: mongo-taxi-ptt
  ports:
    - name: http
      protocol: TCP
      port: 27017
      targetPort: 27017
