kubernetes_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.regional-static-ip-name: 35.207.161.244
spec:
  rules:
  - http:
      paths:
      - path: /provider
        pathType: Prefix
        backend:
          service:
            name: provider-s
            port:
              number: 8080  
      - path: /correlations
        pathType: Prefix
        backend:
          service:
            name: correlations-s
            port:
              number: 8080   
      - path: /analysis
        pathType: Prefix
        backend:
          service:
            name: analytics-s
            port:
              number: 8080
